fix: added `overflow-x: hidden` to dropdown menu `<span>`

--- a/frontend-next-migration/src/shared/ui/CustomForm/ui/CustomForm.module.scss
+++ b/frontend-next-migration/src/shared/ui/CustomForm/ui/CustomForm.module.scss
@@ -1,4 +1,4 @@
-.Form{
+.Form {
   -webkit-user-select: none;
   user-select: none;
   width: 420px;
@@ -15,24 +15,25 @@
   }
 
 
-  h1{
+  h1 {
     margin-bottom: 5px;
     text-align: center;
   }
 
 
-  div{
+  div {
     display: grid;
   }
 
 
-  span{
+  span {
     margin-bottom: 3px;
     padding-left: 3px;
+    overflow-x: hidden;
   }
 
 
-  input{
+  input {
     height: 50px;
     border-radius: var(--border-radius-custom);
     outline: none;
@@ -48,7 +49,7 @@
     font-family: var(--font-family-texts);
   }
 
-  .submit{
+  .submit {
     @include link-scale-effect;
     margin-top: 8px;
     font: var(--font-xl);
@@ -67,4 +68,3 @@
   }
 
 }
-
